# bitebuilder

./: .gitignore  .impeccable.md  AGENTS.md  Makefile  README.md  bitebuilder.py  bitebuilder_tui.py  package.json  playwright.config.js  pyproject.toml  requirements.txt  webapp.py
.ralph-tui/: config.toml  progress.md  session-meta.json  session.json  session.json.1756925.1774322652969.e25877f1.tmp  session.json.1756925.1774322901863.75100a5d.tmp  session.json.1756925.1774323152633.7b52d5e6.tmp  session.json.1756925.1774323237960.f0707daa.tmp  session.json.1756925.1774323393188.4fbac3bb.tmp  session.json.1790695.1774325839951.f25dfe62.tmp  session.json.1790695.1774325881976.fdcd137a.tmp  session.json.1790695.1774326117426.2b79e9c0.tmp
docs/: CLAUDE_AUTH_LOCAL_QUICKSTART.md  Premiere_XML_Generation_Technical_Reference.md  adr-go-tui-generation-transport.md  canonical-runtime-proof.md  codebase-index.md  go-tui-bridge.md  sequence-plan-artifact.md  src-bitebuilder-inventory.md
generator/: sequence_plan.py  sequence_plan_constraints.py  timecode.py  xmeml.py
go-tui/: go.mod  go.sum
llm/: ollama_client.py  prompts.py  sequence_plan_refinement.py
parser/: premiere_xml.py  transcript.py
src/: README.md
static/: app.css  app.js
tasks/: prd-bitebuilder-beta-stabilization-and-quality-enhancements.md  prd-bitebuilder-conversational-edit-workspace.json  prd-bitebuilder-conversational-edit-workspace.md  prd-bitebuilder-ux-bite-cards.json  prd-ingest-first-copilot-workflow.md  prd-ux-v2.json  prd.json
templates/: base.html  context.html  copilot.html  export.html  (+4 more)
(+75 files in other folders)
