[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bitebuilder"
version = "0.1.0"
description = "Local-first CLI and GUI for transcript-driven Premiere bite selects."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31,<3",
]

[project.scripts]
bitebuilder = "bitebuilder.cli:main"
bitebuilder-gui = "bitebuilder.gui_launcher:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
