[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bitebuilder"
version = "0.1.0"
description = "AI-assisted soundbite selection for Premiere Pro workflows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "Flask>=3.0.0",
  "requests>=2.31,<3",
]

[project.scripts]
bitebuilder = "bitebuilder:main"

[tool.setuptools]
py-modules = ["bitebuilder", "webapp"]

[tool.setuptools.packages.find]
include = ["generator", "llm", "parser"]
